--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -2,7 +2,7 @@
   "name": "@repo/api",
   "version": "1.0.0",
   "scripts": {
-    "dev": "nodemon --watch src --watch ../../packages/shared/src --exec ts-node src/index.ts",
+    "dev": "tsx watch --clear-screen=false src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
     "test": "vitest run",
@@ -43,6 +43,7 @@
     "nodemon": "^3.0.3",
     "supertest": "^7.2.2",
     "ts-node": "^10.9.2",
+    "tsx": "^4.19.2",
     "typescript": "^5.3.3",
     "vitest": "^4.0.18"
   }
